--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -681,7 +681,7 @@
         "      action_repeat = 4, unroll_length = 50, num_minibatches = 32,\n",
         "      num_update_epochs = 8, discounting = 0.95, learning_rate = 3e-4,\n",
         "      entropy_cost = 1e-3, num_envs = 2048, batch_size = 256,\n",
-        "      max_devices_per_host = 8),\n",
+        "      max_devices_per_host = 8, seed = 1),\n",
         "}[env_name]\n",
         "max_y = {'ant': 6000, \n",
         "         'humanoid': 12000, \n",
@@ -703,7 +703,7 @@
         "  ydata.append(metrics['eval/episode_reward'])\n",
         "  clear_output(wait=True)\n",
         "  plt.xlim([0, train_fn.keywords['num_timesteps']])\n",
-        "  plt.ylim([0, max_y])\n",
+        "  plt.ylim([min_y, max_y])\n",
         "  plt.xlabel('# environment steps')\n",
         "  plt.ylabel('reward per episode')\n",
         "  plt.plot(xdata, ydata)\n",
