--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -636,7 +636,7 @@
         "      reward_scaling = 10, episode_length = 1000, normalize_observations = True,\n",
         "      action_repeat = 1, unroll_length = 5, num_minibatches = 32,\n",
         "      num_update_epochs = 4, discounting = 0.95, learning_rate = 3e-4,\n",
-        "      entropy_cost = 1e-2, num_envs = 2048, batch_size = 1024, seed = 1\n",
+        "      entropy_cost = 1e-2, num_envs = 2048, batch_size = 1024\n",
         "  ),\n",
         "  'humanoid': functools.partial(\n",
         "      sac.train, num_timesteps = 1048576 * 5,\n",
