Fix bugs and improve the gym_pytorch notebook
Signed-off-by: Fabrice Normandin <fabrice.normandin@gmail.com>

--- a/notebooks/gym_pytorch.ipynb
+++ b/notebooks/gym_pytorch.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Author: @lebrice (Fabrice Normandin)"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "source": [
     "# Imports:\n",
     "import time\n",
@@ -36,10 +38,10 @@
     "from brax.envs.to_torch import JaxToTorchWrapper\n",
     "from brax.envs import _envs, create_gym_env\n",
     "\n",
+    "# Detect if running in Colab or not.\n",
     "COLAB = \"google.colab\" in str(get_ipython())\n",
     "\n",
     "if COLAB:\n",
-    "    # Detect if running in Colab or not.\n",
     "    from jax.tools import colab_tpu\n",
     "    # configure jax to run on tpu:\n",
     "    colab_tpu.setup_tpu()\n",
@@ -50,9 +52,39 @@
     "    entry_point = partial(create_gym_env, env_name=env_name)\n",
     "    if env_id not in gym.envs.registry.env_specs:\n",
     "        print(f\"Registring brax's '{env_name}' env under id '{env_id}'.\")\n",
-    "        gym.register(env_id, entry_point=entry_point)"
+    "        gym.register(env_id, entry_point=entry_point)\n",
+    "\n",
+    "# Simple utility function for benchmarking below.\n",
+    "def tick(name: str = \"\"):\n",
+    "    global _times\n",
+    "    _times.append(time.time())\n",
+    "    elapsed = _times[-1] - _times[-2]\n",
+    "    if name:\n",
+    "        print(f\"Time for {name}: {elapsed}\")\n",
+    "    return elapsed\n",
+    "\n",
+    "CUDA = torch.cuda.is_available()\n",
+    "if CUDA:\n",
+    "    # BUG: (@lebrice): Getting a weird \"CUDA error: out of memory\" RuntimeError during\n",
+    "    # JIT, which can be \"fixed\" by first creating a dummy cuda tensor!\n",
+    "    v = torch.ones(1, device=\"cuda\")\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Registring brax's 'fetch' env under id 'brax_fetch-v0'.\n",
+      "Registring brax's 'ant' env under id 'brax_ant-v0'.\n",
+      "Registring brax's 'grasp' env under id 'brax_grasp-v0'.\n",
+      "Registring brax's 'halfcheetah' env under id 'brax_halfcheetah-v0'.\n",
+      "Registring brax's 'humanoid' env under id 'brax_humanoid-v0'.\n",
+      "Registring brax's 'ur5e' env under id 'brax_ur5e-v0'.\n",
+      "Registring brax's 'reacher' env under id 'brax_reacher-v0'.\n",
+      "Registring brax's 'reacherangle' env under id 'brax_reacherangle-v0'.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -64,29 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "source": [
+    "_times = [time.time()]\n",
+    "\n",
     "# Number of parallel environments\n",
     "batch_size = 1024  #@param { type:\"slider\", min:0, max:4096, step: 1 }\n",
     "\n",
     "# Number of steps to take in the batched env.\n",
     "n_steps = 1000\n",
     "\n",
-    "# Simple utility function for benchmarking.\n",
-    "_times = [time.time()]\n",
-    "def tick(name: str = \"\"):\n",
-    "    _times.append(time.time())\n",
-    "    elapsed = times[-1] - times[-2]\n",
-    "    if name:\n",
-    "        print(f\"Time for {name}: {elapsed}\")\n",
-    "    return elapsed\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    # BUG: (@lebrice): Getting a weird \"CUDA error: out of memory\" RuntimeError during\n",
-    "    # JIT, which can be \"fixed\" by first creating a dummy cuda tensor!\n",
-    "    v = torch.ones(1, device=\"cuda\")\n",
-    "\n",
-    "CUDA = torch.cuda.is_available()\n",
     "\n",
     "env = gym.make(\"brax_halfcheetah-v0\", batch_size=batch_size)\n",
     "tick(\"Creating the env\")\n",
@@ -120,17 +140,17 @@
     "    tick()\n",
     "\n",
     "\n",
-    "elapsed_times = [times[i+1] - times[i] for i in range(len(times)-1)]\n",
+    "elapsed_times = [_times[i+1] - _times[i] for i in range(len(_times)-1)]\n",
     "\n",
-    "time_for_n_steps_avg = np.mean(elapsed_times)\n",
-    "time_for_n_steps_std = np.std(elapsed_times)\n",
+    "time_per_step_avg = np.mean(elapsed_times)\n",
+    "time_per_step_std = np.std(elapsed_times)\n",
     "\n",
-    "frequency =  1 / time_for_n_steps_avg\n",
+    "frequency =  1 / time_per_step_avg\n",
     "effective_frequency = (batch_size or 1) * frequency\n",
     "\n",
     "print(f\"Device used: {obs.device}\")\n",
     "print(f\"Number of parallel environments: {batch_size}\")\n",
-    "print(f\"Average time per batched step:  {time_for_n_steps_avg} ± {time_for_n_steps_std} seconds\")\n",
+    "print(f\"Average time per batched step:  {time_per_step_avg} ± {time_per_step_std} seconds\")\n",
     "print(f\"Frequency (after first two steps): ~{frequency:.3f} batched steps / second.\")\n",
     "print(f\"Effective Frequency (after first two steps): ~{effective_frequency:.3f} steps / second.\")"
    ],
@@ -139,18 +159,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time for Creating the env: 0.0038437843322753906\n",
-      "Time for Wrapping the env: 0.0038437843322753906\n",
-      "Time for First reset: 0.0038437843322753906\n",
-      "Time for First step: 0.0038437843322753906\n",
-      "Time for Second step: 0.0038437843322753906\n"
+      "Time for Creating the env: 10.294265508651733\n",
+      "Time for Wrapping the env: 0.00015664100646972656\n",
+      "Time for First reset: 3.978239059448242\n",
+      "Time for First step: 2.3907294273376465\n",
+      "Time for Second step: 2.2790026664733887\n"
      ]
     },
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 1024000/1024000 [00:03<00:00, 289150.23it/s]"
+      "100%|██████████| 1024000/1024000 [00:03<00:00, 296106.44it/s]"
      ]
     },
     {
@@ -159,9 +179,9 @@
      "text": [
       "Device used: cuda:0\n",
       "Number of parallel environments: 1024\n",
-      "Average time per batched step:  0.0039951517013366335 ± 0.00026153933497828803 seconds\n",
-      "Frequency: ~250.303 batched steps / second.\n",
-      "Effective Frequency: ~256310.668 steps / second.\n"
+      "Average time per batched step:  0.0034599435329437257 ± 0.00036434224775974217 seconds\n",
+      "Frequency (after first two steps): ~289.022 batched steps / second.\n",
+      "Effective Frequency (after first two steps): ~295958.587 steps / second.\n"
      ]
     },
     {
