--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -23,7 +23,7 @@
         "id": "VYe1kc3a4Oxc"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/training.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/google/brax/blob/main/notebooks/training.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\">"
       ]
     },
     {
