--- a/notebooks/basics.ipynb
+++ b/notebooks/basics.ipynb
@@ -6,7 +6,7 @@
         "id": "0QH-0cGfZk-j"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/basics.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/google/brax/blob/main/notebooks/basics.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\">"
       ]
     },
     {
