--- a/notebooks/braxlines/irl_smm.ipynb
+++ b/notebooks/braxlines/irl_smm.ipynb
@@ -1,4 +1,22 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "name": "Brax IRL SMM.ipynb",
+      "private_outputs": true,
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -18,68 +36,53 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/irl_smm.ipynb)"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "_sOmCoOrF0F8"
       },
-      "outputs": [],
       "source": [
-        "#@title Install Brax and some helper modules\n",
+        "#@title Colab setup and imports\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change runtime type, then select 'TPU' in the dropdown.\n",
-        "\n",
-        "from IPython.display import HTML, IFrame, display, clear_output \n",
-        "\n",
-        "brax_url = \"https://github.com/google/brax.git@main\"\n",
-        "!pip install git+$brax_url\n",
-        "clear_output()\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "\n",
         "from datetime import datetime\n",
         "import functools\n",
+        "import os\n",
+        "\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
         "from jax.tools import colab_tpu\n",
+        "from IPython.display import HTML, clear_output \n",
         "import matplotlib.pyplot as plt\n",
-        "import os\n",
-        "from typing import Any, Callable\n",
-        "\n",
         "import tensorflow_probability as tfp\n",
-        "import brax\n",
+        "\n",
+        "tfp = tfp.substrates.jax\n",
+        "tfd = tfp.distributions\n",
+        "\n",
+        "try:\n",
+        "  import brax\n",
+        "except ImportError:\n",
+        "  !pip install git+https://github.com/google/brax.git@main\n",
+        "  clear_output()\n",
+        "  import brax\n",
+        "\n",
         "from brax import envs\n",
         "from brax.io import html\n",
         "from brax.experimental.braxlines.training import ppo\n",
         "from brax.experimental.braxlines.irl_smm import utils as irl_utils\n",
         "\n",
-        "tfp = tfp.substrates.jax\n",
-        "tfd = tfp.distributions\n",
-        "\n",
-        "# configure jax to run on tpu:\n",
-        "colab_tpu.setup_tpu()"
-      ]
+        "if 'COLAB_TPU_ADDR' in os.environ:\n",
+        "  from jax.tools import colab_tpu\n",
+        "  colab_tpu.setup_tpu()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "NaJDZqhCLovU"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing pre-included Brax environments\n",
         "env_name = \"ant\"  # @param ['ant', 'halfcheetah']\n",
@@ -121,22 +124,20 @@
         "  \"\"\"Renders a 3D visualization of the environment.\"\"\"\n",
         "  return HTML(html.render(sys, qps))\n",
         "\n",
-        "# Print out some samples from env.reset()\n",
-        "for i in range(3):\n",
-        "  state = env.reset(rng=jax.random.PRNGKey(seed=i))\n",
-        "  print(f'Sample={i}, obs_shape={state.obs.shape}, act_size={env.action_size}')\n",
+        "jit_env_reset = jax.jit(env.reset)\n",
+        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
         "\n",
         "# Visualize in 3D\n",
         "visualize(env.sys, [state.qp])\n"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "rM7nNiXJU-4s"
       },
-      "outputs": [],
       "source": [
         "#@title Generate and visualize target data distribution p\\*(s, a) or p\\*(s)\n",
         "N =  250# @param{type: 'integer'}\n",
@@ -177,15 +178,15 @@
         "plt.ylim((-lim, lim))\n",
         "plt.title('target (e.g. x-y velocities)')\n",
         "plt.show()"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "4vgMSWODfyMC"
       },
-      "outputs": [],
       "source": [
         "#@title Training some pre-included Brax environments\n",
         "num_timesteps_multiplier =  3# @param {type: 'integer'}\n",
@@ -256,15 +257,15 @@
         "\n",
         "print(f'time to jit: {times[1] - times[0]}')\n",
         "print(f'time to train: {times[-1] - times[1]}')"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "RNMLEyaTspEM"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing a trajectory of the learned inference function\n",
         "seed = 0  # @param {'type': 'integer'}\n",
@@ -274,24 +275,26 @@
         "jit_env_step = jax.jit(env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "qps, states = [], []\n",
-        "state = env.reset(rng=jax.random.PRNGKey(seed=seed))\n",
+        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=seed))\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
         "  states.append(state)\n",
         "  act = jit_inference_fn(params, state.obs, state.rng)\n",
         "  state = jit_env_step(state, act, params[-1])\n",
+        "\n",
         "if save_path:\n",
         "  html.save_html(save_path, env.sys, qps)\n",
+        "\n",
         "visualize(env.sys, qps)"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "p5eWOxg7RmQQ"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing skills of the learned inference function in 2D plot\n",
         "import numpy as np\n",
@@ -340,42 +343,9 @@
         "axs[1].set_ylim([-lim, lim])\n",
         "axs[1].scatter(x=target_vars[:, 0], y=target_vars[:, 1], c=[0,0,1])\n",
         "plt.show()"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "accelerator": "TPU",
-    "colab": {
-      "collapsed_sections": [],
-      "last_runtime": {
-        "build_target": "//learning/deepmind/public/tools/ml_python:ml_notebook",
-        "kind": "private"
-      },
-      "name": "irl_smm.ipynb",
-      "private_outputs": true,
-      "provenance": [
-        {
-          "file_id": "1VwIb25nv6nJT52pSuZn4ldtAWKGvENwl",
-          "timestamp": 1628880272209
-        },
-        {
-          "file_id": "1Gu8SgV7reDUv8weq2P6PRq_YQ2f88Ahv",
-          "timestamp": 1628752357019
-        },
-        {
-          "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
-          "timestamp": 1628294539853
-        }
-      ]
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
