--- a/notebooks/braxlines/vgcrl.ipynb
+++ b/notebooks/braxlines/vgcrl.ipynb
@@ -1,4 +1,22 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "name": "Brax VGCRL.ipynb",
+      "private_outputs": true,
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -16,64 +34,49 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/vgcrl.ipynb)"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "_sOmCoOrF0F8"
       },
-      "outputs": [],
       "source": [
-        "#@title Install Brax and some helper modules\n",
+        "#@title Colab setup and imports\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change runtime type, then select 'TPU' in the dropdown.\n",
-        "\n",
-        "from IPython.display import HTML, IFrame, display, clear_output \n",
-        "\n",
-        "brax_url = \"https://github.com/google/brax.git@main\"\n",
-        "!pip install git+$brax_url\n",
-        "clear_output()\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "\n",
         "from datetime import datetime\n",
         "import functools\n",
+        "import os\n",
+        "\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
         "from jax.tools import colab_tpu\n",
+        "from IPython.display import HTML, clear_output \n",
         "import matplotlib.pyplot as plt\n",
-        "import os\n",
-        "from typing import Any, Callable\n",
         "\n",
-        "import brax as brax\n",
+        "try:\n",
+        "  import brax\n",
+        "except ImportError:\n",
+        "  !pip install git+https://github.com/google/brax.git@main\n",
+        "  clear_output()\n",
+        "  import brax\n",
+        "\n",
         "from brax import envs\n",
         "from brax.io import html\n",
         "from brax.experimental.braxlines.training import ppo\n",
         "from brax.experimental.braxlines.vgcrl import utils as vgcrl_utils\n",
         "\n",
-        "# configure jax to run on tpu:\n",
-        "colab_tpu.setup_tpu()"
-      ]
+        "if 'COLAB_TPU_ADDR' in os.environ:\n",
+        "  from jax.tools import colab_tpu\n",
+        "  colab_tpu.setup_tpu()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "NaJDZqhCLovU"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing pre-included Brax environments { run: \"auto\" }\n",
         "#@markdown Note: Similarly to how experiments were run in\n",
@@ -150,23 +153,21 @@
         "    html.save_html(save_path, sys, qps)\n",
         "  return HTML(html.render(sys, qps))\n",
         "\n",
-        "# Print out some samples from env.reset()\n",
-        "for i in range(3):\n",
-        "  state = env.reset(rng=jax.random.PRNGKey(seed=i))\n",
-        "  env_obs, z = env.disc.split_obs(state.obs)\n",
-        "  print(f'Sample={i}, obs_shape={env_obs.shape}, z={z}')\n",
+        "jit_env_reset = jax.jit(env.reset)\n",
+        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
+        "clear_output()  # clear out jax.lax warning before rendering\n",
         "\n",
         "# Visualize in 3D\n",
-        "visualize(env.sys, [state.qp])\n"
-      ]
+        "visualize(env.sys, [state.qp])"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "4vgMSWODfyMC"
       },
-      "outputs": [],
       "source": [
         "#@title Training some pre-included Brax environments\n",
         "num_timesteps_multiplier =  2# @param {type: 'integer'}\n",
@@ -229,15 +230,15 @@
         "\n",
         "print(f'time to jit: {times[1] - times[0]}')\n",
         "print(f'time to train: {times[-1] - times[1]}')"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "RNMLEyaTspEM"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing a trajectory of the learned inference function\n",
         "rollout_z = \"fix\"  # @param ['sample', 'fix']\n",
@@ -256,25 +257,23 @@
         "    'diayn': jax.nn.one_hot(jnp.array(diayn_index), env.z_size),\n",
         "    'diayn_full': jax.nn.one_hot(jnp.array(diayn_index), env.z_size),\n",
         "         }[exp_name] if rollout_z == \"fix\" else None\n",
-        "state = env.reset(rng=jax.random.PRNGKey(seed=seed), z=z)\n",
+        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=seed), z=z)\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
         "  states.append(state)\n",
         "  act = jit_inference_fn(params, state.obs, state.rng)\n",
         "  state = jit_env_step(state, act, params[-1])\n",
         "\n",
-        "_, z = env.disc.split_obs(state.obs)\n",
-        "print(f'z={z}')\n",
         "visualize(env.sys, qps, save_path=save_path)"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "id": "p5eWOxg7RmQQ"
       },
-      "outputs": [],
       "source": [
         "#@title Visualizing skills of the learned inference function in 2D plot\n",
         "import numpy as np\n",
@@ -333,34 +332,9 @@
         "env_vars = env_vars.reshape(-1, 2) # [T*M*D, 2]\n",
         "plt.scatter(x=env_vars[:, 0], y=env_vars[:, 1], c=colours)\n",
         "plt.show()"
-      ]
+      ],
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "accelerator": "TPU",
-    "colab": {
-      "collapsed_sections": [],
-      "last_runtime": {
-        "build_target": "//learning/deepmind/public/tools/ml_python:ml_notebook",
-        "kind": "private"
-      },
-      "name": "vgcrl.ipynb",
-      "private_outputs": true,
-      "provenance": [
-        {
-          "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
-          "timestamp": 1628880064636
-        }
-      ]
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
