--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -23,21 +23,12 @@
       "hash": "1812c2cdf0067f1c111fe8b907e8717aab013f923026de8fa0a048a0a07a7c66"
     },
     "colab": {
-      "name": "gym_pytorch.ipynb",
+      "name": "Brax Pytorch.ipynb",
       "provenance": []
     },
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XQNZHOfQlor9"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/google/brax/blob/main/notebooks/pytorch.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\">"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -57,24 +48,40 @@
         "id": "Z4sNbJ4smdIh"
       },
       "source": [
-        "#@title Set up Colab dependencies\n",
+        "#@title Colab setup and imports\n",
         "#@markdown ### ⚠️ PLEASE NOTE:\n",
-        "#@markdown Brax and PyTorch can share GPUs but not TPUs.  To access a GPU runtime, select Runtime > Change Runtime Type and set 'Hardware Accelerator' to `GPU`.\n",
+        "#@markdown Brax and PyTorch can share GPUs but not TPUs.  To access a GPU runtime: from the Colab menu choose Runtime > Change Runtime Type, then select **'GPU'** in the dropdown.\n",
         "#@markdown\n",
         "#@markdown Using TPU is OK too, but then PyTorch should run on CPU.\n",
         "\n",
         "import os\n",
+        "import time\n",
+        "from functools import partial\n",
+        "\n",
+        "import gym\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "import tqdm\n",
         "\n",
         "try:\n",
         "  import brax\n",
         "except ImportError:\n",
-        "  from IPython.display import clear_output \n",
+        "  from IPython.display import clear_output\n",
         "  !pip install git+https://github.com/google/brax.git@main\n",
         "  clear_output()\n",
         "\n",
+        "from brax.envs.to_torch import JaxToTorchWrapper\n",
+        "from brax.envs import _envs, create_gym_env\n",
+        "\n",
         "if 'COLAB_TPU_ADDR' in os.environ:\n",
         "  from jax.tools import colab_tpu\n",
-        "  colab_tpu.setup_tpu()"
+        "  colab_tpu.setup_tpu()\n",
+        "\n",
+        "CUDA_AVAILABLE = torch.cuda.is_available()\n",
+        "if CUDA_AVAILABLE:\n",
+        "    # BUG: (@lebrice): Getting a weird \"CUDA error: out of memory\" RuntimeError\n",
+        "    # during JIT, which can be \"fixed\" by first creating a dummy cuda tensor!\n",
+        "    v = torch.ones(1, device=\"cuda\")"
       ],
       "execution_count": 1,
       "outputs": []
@@ -86,42 +93,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKby-SR2losA",
-        "outputId": "65305ce4-6e15-4146-b424-6e987a37e558"
+        "outputId": "3c15da42-0d7e-48c6-8a56-0419af13cad7"
       },
       "source": [
-        "import time\n",
-        "import torch\n",
-        "from functools import partial\n",
+        "#@title Registering Brax environments in Gym\n",
         "\n",
-        "import gym\n",
-        "import tqdm\n",
-        "import numpy as np\n",
-        "\n",
-        "from brax.envs.to_torch import JaxToTorchWrapper\n",
-        "from brax.envs import _envs, create_gym_env\n",
-        "\n",
-        "# Registering the Brax envs in Gym (so we can use `gym.make` as usual):\n",
         "for env_name, env_class in _envs.items():\n",
         "    env_id = f\"brax_{env_name}-v0\"\n",
         "    entry_point = partial(create_gym_env, env_name=env_name)\n",
         "    if env_id not in gym.envs.registry.env_specs:\n",
         "        print(f\"Registring brax's '{env_name}' env under id '{env_id}'.\")\n",
-        "        gym.register(env_id, entry_point=entry_point)\n",
-        "\n",
-        "# Simple utility function for benchmarking below.\n",
-        "def tick(name: str = \"\"):\n",
-        "    global _times\n",
-        "    _times.append(time.time())\n",
-        "    elapsed = _times[-1] - _times[-2]\n",
-        "    if name:\n",
-        "        print(f\"Time for {name}: {elapsed}\", flush=True)\n",
-        "    return elapsed\n",
-        "\n",
-        "CUDA = torch.cuda.is_available()\n",
-        "if CUDA:\n",
-        "    # BUG: (@lebrice): Getting a weird \"CUDA error: out of memory\" RuntimeError\n",
-        "    # during JIT, which can be \"fixed\" by first creating a dummy cuda tensor!\n",
-        "    v = torch.ones(1, device=\"cuda\")\n"
+        "        gym.register(env_id, entry_point=entry_point)"
       ],
       "execution_count": 2,
       "outputs": [
@@ -142,24 +124,25 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yP-4jmL8losB"
-      },
-      "source": [
-        "## Benchmarking the performance of the Pytorch'ed Brax gym Env:"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9mqL2S67losC",
-        "outputId": "5d8b05e8-de77-4794-84c8-3813b181bd53"
+        "outputId": "d517bf15-a5ce-4191-bd75-87655a1b8a32"
       },
       "source": [
+        "#@title Benchmarking steps per second of Pytorch -> Gym -> Brax\n",
+        "\n",
+        "def tick(name: str = \"\"):\n",
+        "    global _times\n",
+        "    _times.append(time.time())\n",
+        "    elapsed = _times[-1] - _times[-2]\n",
+        "    if name:\n",
+        "        print(f\"Time for {name}: {elapsed}\", flush=True)\n",
+        "    return elapsed\n",
+        "\n",
         "_times = [time.time()]\n",
         "\n",
         "# Number of parallel environments\n",
@@ -191,13 +174,12 @@
         "for i in pbar:\n",
         "    # for GPU, we create the pytorch data directly on device in order to avoid\n",
         "    # expensive cross-device copying\n",
-        "    if CUDA:\n",
+        "    if CUDA_AVAILABLE:\n",
         "        action = torch.rand(env.action_space.shape, device=\"cuda\") * 2 - 1\n",
         "    else:\n",
         "        action = env.action_space.sample()\n",
         "    obs, rewards, done, info = env.step(action)\n",
         "    tick()\n",
-        "\n",
         "\n",
         "elapsed_times = [_times[i+1] - _times[i] for i in range(len(_times)-1)]\n",
         "\n",
@@ -217,23 +199,23 @@
         "print(f\"Frequency (after first two steps): ~{frequency:.3f} batched steps / second.\")\n",
         "print(f\"Effective Frequency (after first two steps): ~{effective_frequency:.3f} steps / second.\")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Time for creating the env: 7.492677688598633\n",
-            "Time for wrapping the env: 0.0012292861938476562\n",
-            "Time for first reset: 8.5595543384552\n",
-            "Time for first step: 4.626008033752441\n",
-            "Time for second step: 4.190889835357666\n"
+            "Time for creating the env: 22.936784505844116\n",
+            "Time for wrapping the env: 0.0013244152069091797\n",
+            "Time for first reset: 8.07045602798462\n",
+            "Time for first step: 4.180543899536133\n",
+            "Time for second step: 3.7199959754943848\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2048000/2048000 [00:05<00:00, 364426.28it/s]"
+            "100%|██████████| 2048000/2048000 [00:05<00:00, 397047.16it/s]"
           ],
           "name": "stderr"
         },
@@ -243,9 +225,9 @@
             "\n",
             "Device used: cuda:0\n",
             "Number of parallel environments: 2048\n",
-            "Average time per batched step:  0.005624113082885743 ± 0.0010372177569917425 seconds\n",
-            "Frequency (after first two steps): ~177.806 batched steps / second.\n",
-            "Effective Frequency (after first two steps): ~364146.305 steps / second.\n"
+            "Average time per batched step:  0.005167229413986206 ± 0.0018089269095354766 seconds\n",
+            "Frequency (after first two steps): ~193.527 batched steps / second.\n",
+            "Effective Frequency (after first two steps): ~396343.927 steps / second.\n"
           ],
           "name": "stdout"
         },
