--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -181,7 +181,7 @@
         "* [Proximal policy optimization](https://github.com/google/brax/blob/main/brax/training/ppo.py)\n",
         "* [Soft actor-critic](https://github.com/google/brax/blob/main/brax/training/sac.py)\n",
         "* [Evolutionary strategy](https://github.com/google/brax/blob/main/brax/training/es.py)\n",
-        "* [Direct trajectory optimization](https://github.com/google/brax/blob/main/brax/training/dto.py)\n",
+        "* [Analytic policy gradients](https://github.com/google/brax/blob/main/brax/training/apg.py)\n",
         "\n",
         "Trainers take as input an environment function and some hyperparameters, and return an inference function to operate the environment."
       ]
