--- a/notebooks/braxlines/irl_smm.ipynb
+++ b/notebooks/braxlines/irl_smm.ipynb
@@ -1,22 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "accelerator": "TPU",
-    "colab": {
-      "name": "Brax IRL SMM.ipynb",
-      "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -36,14 +18,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VYe1kc3a4Oxc"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/irl_smm.ipynb)"
+      ]
+    },
+    {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_sOmCoOrF0F8"
       },
+      "outputs": [],
       "source": [
-        "#@title Colab setup and imports\n",
+        "#@title Install Brax and some helper modules\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change runtime type, then select 'TPU' in the dropdown.\n",
         "\n",
         "from datetime import datetime\n",
         "import functools\n",
@@ -51,13 +50,8 @@
         "\n",
         "import jax\n",
         "import jax.numpy as jnp\n",
-        "from jax.tools import colab_tpu\n",
         "from IPython.display import HTML, clear_output \n",
         "import matplotlib.pyplot as plt\n",
-        "import tensorflow_probability as tfp\n",
-        "\n",
-        "tfp = tfp.substrates.jax\n",
-        "tfd = tfp.distributions\n",
         "\n",
         "try:\n",
         "  import brax\n",
@@ -66,39 +60,60 @@
         "  clear_output()\n",
         "  import brax\n",
         "\n",
-        "from brax import envs\n",
+        "import tensorflow_probability as tfp\n",
         "from brax.io import html\n",
+        "from brax.experimental.composer import composer\n",
+        "from brax.experimental.composer import observers\n",
         "from brax.experimental.braxlines.training import ppo\n",
         "from brax.experimental.braxlines.irl_smm import utils as irl_utils\n",
+        "\n",
+        "tfp = tfp.substrates.jax\n",
+        "tfd = tfp.distributions\n",
+        "\n",
+        "def visualize(sys, qps, save_path: str = None):\n",
+        "  \"\"\"Renders a 3D visualization of the environment.\"\"\"\n",
+        "  if save_path:\n",
+        "    html.save_html(save_path, sys, qps, make_dir=True)\n",
+        "  return HTML(html.render(sys, qps))\n",
         "\n",
         "if 'COLAB_TPU_ADDR' in os.environ:\n",
         "  from jax.tools import colab_tpu\n",
         "  colab_tpu.setup_tpu()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "NaJDZqhCLovU"
       },
+      "outputs": [],
       "source": [
         "#@title Visualizing pre-included Brax environments\n",
-        "env_name = \"ant\"  # @param ['ant', 'halfcheetah']\n",
-        "exp_name = \"smm_multimode\"  # @param ['irl_indexing', 'irl', 'smm', 'smm_multimode', 'smm_multimode3', 'smm_maxent']\n",
-        "algo_name = \"gail\"  # @param ['gail', 'airl']\n",
+        "env_name = \"ant\"  # @param ['ant', 'halfcheetah', 'ant_cheetah', 'uni_ant', 'bi_ant']\n",
+        "env_space = \"vel\" # @param ['vel', 'pos', 'ang']\n",
+        "exp_name = \"smm_multimode\"  # @param ['smm', 'smm_multimode', 'smm_multimode3', 'smm_maxent']\n",
+        "algo_name = \"gail2\"  # @param ['gail', 'airl', 'gail2', 'fairl']\n",
         "disc_arch = \"mlp\"  # @param ['linear', 'mlp']\n",
         "logits_clip_range = 10.0# @param {'type': 'number'}\n",
+        "normalize_obs_for_disc = False # @param {'type': 'boolean'}\n",
+        "balance_data_for_disc = True # @param {'type': 'boolean'}\n",
         "\n",
         "env_indices = {\n",
-        "    'ant': (13, 14),  # x-y velocities\n",
-        "    'humanoid': (22, 23),  # x-y velocities\n",
-        "    'halfcheetah': (11,),  # x velocity\n",
-        "}[env_name]\n",
-        "base_env_fn = envs.create_fn(env_name=env_name)\n",
+        "    'vel': { # x-y velocity\n",
+        "      'ant': (13, 14),\n",
+        "      'humanoid': (22, 23),\n",
+        "      'halfcheetah': (11,),\n",
+        "      'uni_ant': (('vel:torso_ant1', 0),('vel:torso_ant1', 1)),\n",
+        "      'bi_ant': (('vel:torso_ant1', 0),('vel:torso_ant2', 0)),\n",
+        "    },\n",
+        "    'ang': { # angular velocity\n",
+        "      'ant': (17,),\n",
+        "      'uni_ant': (('ang:torso_ant1', 2),),\n",
+        "    },\n",
+        "}[env_space][env_name]\n",
+        "base_env_fn = composer.create_fn(env_name=env_name)\n",
         "base_env = base_env_fn()\n",
-        "env_obs_size = base_env.observation_size\n",
         "\n",
         "disc_arch = {\n",
         "    'linear': (),\n",
@@ -115,29 +130,29 @@
         "        )\n",
         "else:\n",
         "  raise NotImplementedError(exp_name)\n",
-        "disc = disc_fn(reward_type=algo_name)\n",
+        "disc = disc_fn(reward_type=algo_name,\n",
+        "               normalize_obs=normalize_obs_for_disc,\n",
+        "               balance_data=balance_data_for_disc,\n",
+        "               env=base_env)\n",
         "extra_params = disc.init_model(rng=jax.random.PRNGKey(seed=0)) \n",
         "env_fn = irl_utils.create_fn(env_name=env_name, disc=disc)\n",
         "env = env_fn()\n",
         "\n",
-        "def visualize(sys, qps):\n",
-        "  \"\"\"Renders a 3D visualization of the environment.\"\"\"\n",
-        "  return HTML(html.render(sys, qps))\n",
-        "\n",
+        "# Visualize in 3D\n",
+        "env = env_fn()\n",
         "jit_env_reset = jax.jit(env.reset)\n",
         "state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
-        "\n",
-        "# Visualize in 3D\n",
-        "visualize(env.sys, [state.qp])\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "clear_output()  # clear out jax.lax warning before rendering\n",
+        "visualize(env.sys, [state.qp])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "rM7nNiXJU-4s"
       },
+      "outputs": [],
       "source": [
         "#@title Generate and visualize target data distribution p\\*(s, a) or p\\*(s)\n",
         "N =  250# @param{type: 'integer'}\n",
@@ -169,6 +184,8 @@
         "else:\n",
         "  raise NotImplementedError(exp_name)\n",
         "\n",
+        "disc.set_target_data(target_data)\n",
+        "\n",
         "print(f'target_data={target_data.shape}')\n",
         "lim = jnp.max(jnp.abs(target_data_2d)) + 0.5\n",
         "plt.scatter(x=target_data_2d[:, 0],\n",
@@ -178,37 +195,28 @@
         "plt.ylim((-lim, lim))\n",
         "plt.title('target (e.g. x-y velocities)')\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "4vgMSWODfyMC"
       },
+      "outputs": [],
       "source": [
         "#@title Training some pre-included Brax environments\n",
-        "num_timesteps_multiplier =  3# @param {type: 'integer'}\n",
+        "num_timesteps_multiplier =  2# @param {type: 'integer'}\n",
         "\n",
         "# We determined some reasonable hyperparameters offline and share them here.\n",
         "n = num_timesteps_multiplier\n",
-        "train_fn = {\n",
-        "  'ant': functools.partial(\n",
+        "train_fn = functools.partial(\n",
         "      ppo.train, num_timesteps = 50_000_000*n, log_frequency = 20,\n",
         "      reward_scaling = 10, episode_length = 1000, normalize_observations = True,\n",
         "      action_repeat = 1, unroll_length = 5, num_minibatches = 32,\n",
         "      num_update_epochs = 4, discounting = 0.95, learning_rate = 3e-4,\n",
         "      entropy_cost = 1e-2, num_envs = 2048, batch_size = 1024\n",
-        "  ),\n",
-        "  'halfcheetah': functools.partial(\n",
-        "      ppo.train, num_timesteps = 50_000_000*n, log_frequency = 10,\n",
-        "      reward_scaling = 1, episode_length = 1000, normalize_observations = True,\n",
-        "      action_repeat = 1, unroll_length = 20, num_minibatches = 32,\n",
-        "      num_update_epochs = 8, discounting = 0.95, learning_rate = 3e-4,\n",
-        "      entropy_cost = 0.001, num_envs = 2048, batch_size = 512\n",
-        "  ),\n",
-        "}[env_name]\n",
+        "  )\n",
         "\n",
         "times = [datetime.now()]\n",
         "plotdata = {}\n",
@@ -235,7 +243,7 @@
         "    axs[i].set(xlabel='# environment steps', ylabel=key)\n",
         "    axs[i].set_xlim([0, train_fn.keywords['num_timesteps']])\n",
         "  # plot discriminator visualization\n",
-        "  distgrid = disc.dist(datagrid, params=optimizer_params['extra'])\n",
+        "  distgrid = disc.dist(datagrid[..., :len(env_indices)], params=optimizer_params['extra'])\n",
         "  probsgrid = jax.nn.sigmoid(distgrid.logits)\n",
         "  print(f'disc probs: max={probsgrid.max()}, min={probsgrid.min()}')\n",
         "  colors = jnp.clip(jnp.array([[-2, 0, 2]]) * (probsgrid-0.5), a_min=0)\n",
@@ -248,53 +256,52 @@
         "  fig.tight_layout()\n",
         "  plt.show()\n",
         "\n",
-        "extra_loss_fns = dict(disc_loss=functools.partial(\n",
-        "    irl_utils.disc_loss_fn, disc=disc, target_data=target_data,\n",
-        "    balance_data=True))\n",
+        "extra_loss_fns = dict(disc_loss=disc.disc_loss_fn)\n",
         "inference_fn, params, _ = train_fn(environment_fn=env_fn, \n",
         "    progress_fn=progress, extra_params=extra_params,\n",
         "    extra_loss_fns=extra_loss_fns)\n",
         "\n",
         "print(f'time to jit: {times[1] - times[0]}')\n",
         "print(f'time to train: {times[-1] - times[1]}')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "RNMLEyaTspEM"
       },
+      "outputs": [],
       "source": [
         "#@title Visualizing a trajectory of the learned inference function\n",
         "seed = 0  # @param {'type': 'integer'}\n",
-        "save_path = '/tmp/{env_name}_{exp_name}_{algo_name}.html' # @param {'type': 'raw'}\n",
-        "save_path = save_path.format(env_name=env_name, exp_name=exp_name, algo_name=algo_name)\n",
+        "save_path = None # @param {'type': 'raw'}\n",
+        "save_path = save_path.format(\n",
+        "    date=datetime.now().strftime('%Y%m%d'),\n",
+        "    env_space=env_space,\n",
+        "    env_name=env_name,\n",
+        "    exp_name=exp_name,\n",
+        "    algo_name=algo_name) if save_path else save_path\n",
         "\n",
         "jit_env_step = jax.jit(env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "qps, states = [], []\n",
-        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=seed))\n",
+        "state = env.reset(rng=jax.random.PRNGKey(seed=seed))\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
         "  states.append(state)\n",
         "  act = jit_inference_fn(params, state.obs, state.rng)\n",
-        "  state = jit_env_step(state, act, params[-1])\n",
-        "\n",
-        "if save_path:\n",
-        "  html.save_html(save_path, env.sys, qps)\n",
-        "\n",
-        "visualize(env.sys, qps)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "  state = jit_env_step(state, act, params[0], params[-1])\n",
+        "visualize(env.sys, qps, save_path=save_path)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "p5eWOxg7RmQQ"
       },
+      "outputs": [],
       "source": [
         "#@title Visualizing skills of the learned inference function in 2D plot\n",
         "import numpy as np\n",
@@ -313,39 +320,73 @@
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "while not state.done.all():\n",
         "  act = jit_inference_fn(params, state.obs, state.rng[0])\n",
-        "  state = jit_step(state, act, params[-1])\n",
+        "  state = jit_step(state, act, params[0], params[-1])\n",
         "  states.append(state)\n",
         "\n",
         "# Get indices of interest\n",
-        "obses = jnp.stack([state.obs for state in states],\n",
-        "                  axis=0)[-time_last_n:][::time_subsampling]\n",
-        "env_vars = obses[..., env_indices] # [T, num_samples, #env_indices]\n",
+        "obses_full = jnp.stack([state.obs for state in states],\n",
+        "                  axis=0)\n",
+        "obses = obses_full[-time_last_n:][::time_subsampling]\n",
+        "env_vars = batch_env.disc.index_obs(obses) # [T, num_samples, #env_indices]\n",
         "target_vars = target_data\n",
         "if env_vars.shape[-1] == 1:\n",
         "  env_vars = jnp.concatenate([env_vars, jnp.zeros(env_vars.shape)], axis=-1)\n",
         "  target_vars = jnp.concatenate([target_vars, jnp.zeros(target_vars.shape)], axis=-1)\n",
-        "env_vars = env_vars.reshape(-1, 2)\n",
-        "target_vars = target_vars.reshape(-1, 2)\n",
         "print(f'env_vars.shape={env_vars.shape}')\n",
         "print(f'target_vars.shape={target_vars.shape}')\n",
+        "env_vars_flat = env_vars.reshape(-1, 2)\n",
+        "target_vars_flat = target_vars.reshape(-1, 2)\n",
         "\n",
         "# Plot\n",
         "lim = jnp.max(jnp.abs(\n",
-        "    jnp.concatenate([env_vars, target_vars], axis=0))) + 0.5\n",
-        "fig, axs = plt.subplots(ncols=2, figsize=(3.5*2, 3))\n",
+        "    jnp.concatenate([env_vars_flat, target_vars_flat], axis=0))) + 0.5\n",
+        "fig, axs = plt.subplots(ncols=2, figsize=(3.5*3, 3))\n",
         "fig.tight_layout()\n",
-        "axs[0].set(title='agent policy (e.g. x-y velocities)')\n",
+        "axs[0].set(title='agent policy')\n",
         "axs[0].set_xlim([-lim, lim])\n",
         "axs[0].set_ylim([-lim, lim])\n",
-        "axs[0].scatter(x=env_vars[:, 0], y=env_vars[:, 1], c=[1,0,0])\n",
-        "axs[1].set(title='target (e.g. x-y velocities)')\n",
+        "axs[0].scatter(x=env_vars_flat[:, 0], y=env_vars_flat[:, 1], c=[1,0,0], alpha=0.3)\n",
+        "axs[1].set(title='target')\n",
         "axs[1].set_xlim([-lim, lim])\n",
         "axs[1].set_ylim([-lim, lim])\n",
-        "axs[1].scatter(x=target_vars[:, 0], y=target_vars[:, 1], c=[0,0,1])\n",
+        "axs[1].scatter(x=target_vars_flat[:, 0], y=target_vars_flat[:, 1], c=[0,0,1], alpha=0.3)\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "collapsed_sections": [],
+      "last_runtime": {
+        "build_target": "//learning/deepmind/public/tools/ml_python:ml_notebook",
+        "kind": "private"
+      },
+      "name": "irl_smm.ipynb",
+      "private_outputs": true,
+      "provenance": [
+        {
+          "file_id": "1VwIb25nv6nJT52pSuZn4ldtAWKGvENwl",
+          "timestamp": 1629757885242
+        },
+        {
+          "file_id": "1Gu8SgV7reDUv8weq2P6PRq_YQ2f88Ahv",
+          "timestamp": 1628752357019
+        },
+        {
+          "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
+          "timestamp": 1628294539853
+        }
+      ]
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
