--- a/notebooks/braxlines/experiment_viewer.ipynb
+++ b/notebooks/braxlines/experiment_viewer.ipynb
@@ -2,20 +2,17 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ssCOanHc8JH_"
-      },
       "source": [
         "# Experiment Viewer\n",
         "\n",
         "We can visualize hyperparameter sweep result directly on Colab."
-      ]
+      ],
+      "metadata": {
+        "id": "ssCOanHc8JH_"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
       "source": [
         "\n",
         "\n",
@@ -24,17 +21,19 @@
         "```\n",
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/experimental/braxlines/notebooks/vgcrl.ipynb)"
-      ]
+      ],
+      "metadata": {
+        "id": "VYe1kc3a4Oxc"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "rlVNS8JstMRr"
-      },
-      "outputs": [],
       "source": [
         "# @title Colab setup and imports\n",
+        "import os\n",
+        "from IPython.display import clear_output\n",
+        "\n",
         "try:\n",
         "  import brax\n",
         "except ImportError:\n",
@@ -50,15 +49,15 @@
         "pattern = f'{output_path}/**/training_curves.csv'\n",
         "csv_files = file.Glob(pattern)\n",
         "print(f'Found {len(csv_files)} files matching {pattern}')\n"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "rlVNS8JstMRr"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "9Mn_Iml-w71b"
-      },
-      "outputs": [],
       "source": [
         "# @title Load data\n",
         "data = {}\n",
@@ -66,15 +65,15 @@
         "  key = os.path.basename(os.path.dirname(csv_file))\n",
         "  print(f'[{i+1}/{len(csv_files)}]')\n",
         "  data[key] = logger_utils.parse_csv(csv_file, verbose=True)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "9Mn_Iml-w71b"
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "yEwJnB4F3sYk"
-      },
-      "outputs": [],
       "source": [
         "# @title Plot data\n",
         "import matplotlib.pyplot as plt\n",
@@ -101,7 +100,11 @@
         "ax.legend()\n",
         "fig.tight_layout()\n",
         "plt.show()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "yEwJnB4F3sYk"
+      }
     }
   ],
   "metadata": {
@@ -138,5 +141,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
