--- a/notebooks/braxlines/irl_smm.ipynb
+++ b/notebooks/braxlines/irl_smm.ipynb
@@ -286,11 +286,14 @@
         "jit_env_step = jax.jit(env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "qps, states = [], []\n",
-        "state = env.reset(rng=jax.random.PRNGKey(seed=seed))\n",
+        "rng = jax.random.PRNGKey(seed=seed)\n",
+        "reset_key, rng = jax.random.split(rng)",
+        "state = env.reset(rng=reset_key)\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
         "  states.append(state)\n",
-        "  act = jit_inference_fn(params, state.obs, state.rng)\n",
+        "  tmp_key, rng = jax.random.split(rng)\n",
+        "  act = jit_inference_fn(params, state.obs, tmp_key)\n",
         "  state = jit_env_step(state, act, params[0], params[-1])\n",
         "visualize(env.sys, qps, save_path=save_path)"
       ]
@@ -313,13 +316,16 @@
         "\n",
         "# Reset and run environment\n",
         "batch_env = env_fn(batch_size=num_samples)\n",
-        "state = batch_env.reset(\n",
-        "    jnp.array([jax.random.PRNGKey(seed+i) for i in range(num_samples)]))\n",
+        "rng = jax.random.PRNGKey(seed=seed)\n",
+        "reset_key, rng = jax.random.split(rng)",
+        "reset_key = jnp.stack(jax.random.split(reset_key, num_samples))\n",
+        "state = batch_env.reset(reset_key)\n",
         "states = [state]\n",
         "jit_step = jax.jit(batch_env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "while not state.done.all():\n",
-        "  act = jit_inference_fn(params, state.obs, state.rng[0])\n",
+        "  tmp_key, rng = jax.random.split(rng)\n",
+        "  act = jit_inference_fn(params, state.obs, tmp_key)\n",
         "  state = jit_step(state, act, params[0], params[-1])\n",
         "  states.append(state)\n",
         "\n",
