--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -333,11 +333,14 @@
         "\n",
         "jit_env_step = jax.jit(env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
-        "state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
+        "rng = jax.random.PRNGKey(seed=0)\n",
+        "reset_key, rng = jax.random.split(rng)",
+        "state = jit_env_reset(rng=reset_key)\n",
         "qps = []\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
-        "  act = jit_inference_fn(params, state.obs, state.rng)\n",
+        "  tmp_key, rng = jax.random.split(rng)\n",
+        "  act = jit_inference_fn(params, state.obs, tmp_key)\n",
         "  state = jit_env_step(state, act)\n",
         "\n",
         "visualize(env.sys, qps)"
