--- a/notebooks/braxlines/irl_smm.ipynb
+++ b/notebooks/braxlines/irl_smm.ipynb
@@ -287,7 +287,7 @@
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "qps, states = [], []\n",
         "rng = jax.random.PRNGKey(seed=seed)\n",
-        "reset_key, rng = jax.random.split(rng)",
+        "reset_key, rng = jax.random.split(rng)\n",
         "state = env.reset(rng=reset_key)\n",
         "while not state.done:\n",
         "  qps.append(state.qp)\n",
