--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -334,7 +334,7 @@
         "jit_env_step = jax.jit(env.step)\n",
         "jit_inference_fn = jax.jit(inference_fn)\n",
         "rng = jax.random.PRNGKey(seed=0)\n",
-        "reset_key, rng = jax.random.split(rng)",
+        "reset_key, rng = jax.random.split(rng)\n",
         "state = jit_env_reset(rng=reset_key)\n",
         "qps = []\n",
         "while not state.done:\n",
