--- a/notebooks/braxlines/experiment_sweep.ipynb
+++ b/notebooks/braxlines/experiment_sweep.ipynb
@@ -2,17 +2,20 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ssCOanHc8JH_"
+      },
       "source": [
         "# Sweep Training\n",
         "\n",
         "We can perform hyperparameter sweep directly on Colab."
-      ],
-      "metadata": {
-        "id": "ssCOanHc8JH_"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VYe1kc3a4Oxc"
+      },
       "source": [
         "\n",
         "\n",
@@ -21,7 +24,7 @@
         "```\n",
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/braxlines/experiment_sweep.ipynb)"
-      ],
+      ]
       "metadata": {
         "id": "VYe1kc3a4Oxc"
       }
@@ -29,10 +32,14 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "rlVNS8JstMRr"
+      },
+      "outputs": [],
       "source": [
         "#@title Colab setup and imports\n",
         "#@markdown ## ⚠️ PLEASE NOTE:\n",
-        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime > Change Runtime Type, then select **'TPU'** in the dropdown.\n",
+        "#@markdown This colab runs best using a TPU runtime.  From the Colab menu, choose Runtime \u003e Change Runtime Type, then select **'TPU'** in the dropdown.\n",
         "\n",
         "#@markdown See [config_utils.py](https://github.com/google/brax/blob/main/brax/experimental/braxlines/common/config_utils.py)\n",
         "#@markdown for the configuration format.\n",
@@ -50,46 +57,77 @@
         "  clear_output()\n",
         "  import brax\n",
         "\n",
-        "agent_module = 'brax.experimental.braxlines.vgcrl.train' #@param{'type': 'string'}\n",
+        "agent = 'vgcrl' # @param ['vgcrl', 'irl_smm']\n",
+        "agent_module = f'brax.experimental.braxlines.{agent}.train'\n",
         "output_path = '' #@param{'type': 'string'}\n",
         "start_count = 0 # @param{'type': 'integer'}\n",
         "end_count = 100000000 # @param{'type': 'integer'}\n",
-        "experiment_path = None #@param{'type': 'raw'}\n",
+        "experiment_path = '' #@param{'type': 'string'}\n",
         "experiment_path=experiment_path or datetime.now().strftime('%Y%m%d_%H%M%S')\n",
         "output_path = f'{output_path}/{experiment_path}'\n",
         "\n",
         "from brax.experimental.braxlines.common import config_utils\n",
         "train = importlib.import_module(agent_module)\n",
-        "if \"COLAB_TPU_ADDR\" in os.environ:\n",
-        "  from jax.tools import colab_tpu\n",
-        "  colab_tpu.setup_tpu()\n",
         "\n",
-        "config = [\n",
+        "if agent == 'vgcrl':\n",
+        "  config = [\n",
+        "    dict(\n",
+        "        env_name = ['ant'],\n",
+        "        obs_indices = 'vel',\n",
+        "        algo_name = ['gcrl', 'diayn', 'cdiayn', 'diayn_full'],\n",
+        "        obs_scale = [5.0],\n",
+        "        seed = [0],\n",
+        "        normalize_obs_for_disc = False,\n",
+        "        evaluate_mi = True,\n",
+        "        evaluate_lgr = False,\n",
+        "        env_reward_multiplier = 0.0,\n",
+        "        spectral_norm = [True],\n",
+        "        ppo_params = dict(\n",
+        "          num_timesteps=int(2.5 * 1e8),\n",
+        "          reward_scaling=10,\n",
+        "          episode_length=1000,\n",
+        "          normalize_observations=True,\n",
+        "          action_repeat=1,\n",
+        "          unroll_length=5,\n",
+        "          num_minibatches=32,\n",
+        "          num_update_epochs=4,\n",
+        "          discounting=0.95,\n",
+        "          learning_rate=3e-4,\n",
+        "          entropy_cost=1e-2,\n",
+        "          num_envs=2048,\n",
+        "          batch_size=1024,)\n",
+        "    ),\n",
+        "  ]\n",
+        "elif agent == 'irl_smm':\n",
+        "  config = [\n",
         "  dict(\n",
-        "      # env_name = ['ant', 'halfcheetah', 'uni_ant', 'bi_ant'],\n",
-        "      env_name = 'ant',\n",
-        "      env_space = 'vel',\n",
-        "      # algo_name = ['gcrl', 'cdiayn', 'diayn', 'diayn_full'],\n",
-        "      algo_name = ['gcrl', 'diayn'],\n",
+        "      env_name = ['ant'],\n",
+        "      obs_indices = 'vel',\n",
+        "      target_num_modes = [2],\n",
+        "      obs_scale = [8], \n",
+        "      reward_type = ['gail2', 'mle', 'airl'],\n",
         "      seed = [0],\n",
-        "      normalize_obs_for_disc = [False],\n",
+        "      normalize_obs_for_disc = False,\n",
+        "      evaluate_dist =False,\n",
+        "      env_reward_multiplier = 0.0,\n",
         "      spectral_norm = [True],\n",
         "      ppo_params = dict(\n",
-        "        num_timesteps=int(2e8),\n",
+        "        num_timesteps=int(1.5 * 1e8),\n",
         "        reward_scaling=10,\n",
         "        episode_length=1000,\n",
         "        normalize_observations=True,\n",
         "        action_repeat=1,\n",
-        "        unroll_length=[5, 10, 20],\n",
+        "        unroll_length=5,\n",
         "        num_minibatches=32,\n",
         "        num_update_epochs=4,\n",
         "        discounting=0.95,\n",
-        "        learning_rate=[3e-4, 3e-5],\n",
+        "        learning_rate=3e-4,\n",
         "        entropy_cost=1e-2,\n",
-        "        num_envs=[2048, 4096],\n",
+        "        num_envs=2048,\n",
         "        batch_size=1024,)\n",
         "  ),\n",
         "]\n",
+        "\n",
         "\n",
         "prefix_keys = config_utils.list_keys_to_expand(config)\n",
         "for c, p in zip(config, prefix_keys):\n",
@@ -101,22 +139,27 @@
         "print(f'Loaded {sum(config_count)}({config_count}) experiment configurations')\n",
         "print(f'Set start_count={start_count}, end_count={end_count}')\n",
         "print(f'Set prefix_keys={prefix_keys}')\n",
-        "print(f'Set output_dir={output_path}')"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "rlVNS8JstMRr"
-      }
+        "print(f'Set output_dir={output_path}')\n",
+        "\n",
+        "if \"COLAB_TPU_ADDR\" in os.environ:\n",
+        "  from jax.tools import colab_tpu\n",
+        "  colab_tpu.setup_tpu()"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "NaJDZqhCLovU"
+      },
+      "outputs": [],
       "source": [
         "#@title Launch experiments\n",
+        "ignore_errors = False # @param{'type': 'boolean'}\n",
         "\n",
         "return_dict = {}\n",
         "for i in range(start_count, end_count):\n",
-        "  c= config_utils.index_configuration(config, index=i, count=config_count)\n",
+        "  c, _= config_utils.index_configuration(config, index=i, count=config_count)\n",
         "  task_name = config_utils.get_compressed_name_from_keys(\n",
         "      c, train.TASK_KEYS)\n",
         "  experiment_name = config_utils.get_compressed_name_from_keys(\n",
@@ -128,15 +171,14 @@
         "  print(f'\\t previous time_to_jit={return_dict.get(\"time_to_train\", None)}')\n",
         "  print(f'\\t previous time_to_train={return_dict.get(\"time_to_jit\", None)}')\n",
         "  return_dict = {}\n",
-        "  try:\n",
-        "    train.train(c, output_dir=output_dir, return_dict=return_dict)\n",
-        "  except Error as e:\n",
-        "    print(f'[{i+1}/{sum(config_count)}] FAILED experiment {e}')"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "NaJDZqhCLovU"
-      }
+        "  if ignore_errors:\n",
+        "    try:\n",
+        "      train.train(c, output_dir=output_dir, return_dict=return_dict)\n",
+        "    except Exception as e:\n",
+        "      print(f'[{i+1}/{sum(config_count)}] FAILED experiment {e.__class__.__name__}: {e.message}')\n",
+        "  else:\n",
+        "    train.train(c, output_dir=output_dir, return_dict=return_dict)"
+      ]
     }
   ],
   "metadata": {
@@ -152,7 +194,7 @@
       "provenance": [
         {
           "file_id": "1zvUdazhGU7ZjPl-Vb2GSESCWtEgiw2bJ",
-          "timestamp": 1629757707070
+          "timestamp": 1630385511598
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
@@ -169,5 +211,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 0
 }
