--- a/notebooks/braxlines/experiment_sweep.ipynb
+++ b/notebooks/braxlines/experiment_sweep.ipynb
@@ -25,9 +25,6 @@
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/braxlines/experiment_sweep.ipynb)"
       ]
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      }
     },
     {
       "cell_type": "code",
@@ -59,7 +56,7 @@
         "\n",
         "agent = 'vgcrl' # @param ['vgcrl', 'irl_smm']\n",
         "agent_module = f'brax.experimental.braxlines.{agent}.train'\n",
-        "output_path = '' #@param{'type': 'string'}\n",
+        "output_path = '/tmp' #@param{'type': 'string'}\n",
         "start_count = 0 # @param{'type': 'integer'}\n",
         "end_count = 100000000 # @param{'type': 'integer'}\n",
         "experiment_path = '' #@param{'type': 'string'}\n",
@@ -194,7 +191,7 @@
       "provenance": [
         {
           "file_id": "1zvUdazhGU7ZjPl-Vb2GSESCWtEgiw2bJ",
-          "timestamp": 1630385511598
+          "timestamp": 1631844887298
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
