--- a/notebooks/braxlines/experiment_viewer.ipynb
+++ b/notebooks/braxlines/experiment_viewer.ipynb
@@ -25,9 +25,6 @@
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/braxlines/experiment_viewer.ipynb)"
       ]
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      }
     },
     {
       "cell_type": "code",
@@ -54,8 +51,8 @@
         "output_path2 = '' #@param{'type': 'string'}\n",
         "output_path3 = '' #@param{'type': 'string'}\n",
         "\n",
-        "  # from brax.io import file\n",
-        "  # from brax.experimental.braxlines.common import logger_utils\n",
+        "from brax.io import file\n",
+        "from brax.experimental.braxlines.common import logger_utils\n",
         "\n",
         "output_paths = [output_path1, output_path2, output_path3]\n",
         "csv_files = []\n",
@@ -160,7 +157,7 @@
       "provenance": [
         {
           "file_id": "1-fplVbCqf5xQaosZXC9UcaiKfNpsNKjx",
-          "timestamp": 1630385557712
+          "timestamp": 1631845056521
         },
         {
           "file_id": "1zvUdazhGU7ZjPl-Vb2GSESCWtEgiw2bJ",
